# mcs-qs

./: CLAUDE.md  CMakeLists.txt  README.md  flake.nix
.github/workflows/: release.yml
assets/: dev.mcs.mcs-qs.desktop
nix/: package.nix
src/: CMakeLists.txt
src/bluetooth/: CMakeLists.txt  adapter.cpp  adapter.hpp  agent.cpp  agent.hpp  bluez.cpp  bluez.hpp  device.hpp  org.bluez.Agent1.xml  org.bluez.AgentManager1.xml
src/core/: CMakeLists.txt  iconimageprovider.cpp  iconimageprovider.hpp  qmlglobal.cpp  qmlglobal.hpp  region.cpp  region.hpp  threadutils.hpp  vibrant.cpp  vibrant.hpp
src/crash/: main.cpp
src/dbus/: CMakeLists.txt
src/dbus/server/: CMakeLists.txt  handler.cpp  handler.hpp
src/io/: CMakeLists.txt  httpfetcher.cpp  httpfetcher.hpp
src/launch/: command.cpp  launch.cpp  main.cpp  parsecommand.cpp
src/network/: wifi.hpp
src/network/nm/: accesspoint.hpp  backend.cpp  wireless.cpp  wireless.hpp
src/services/: CMakeLists.txt
src/services/logind/: CMakeLists.txt  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Session.xml  qml.cpp  qml.hpp
src/services/pipewire/: CMakeLists.txt  node.cpp  node.hpp  qml.cpp  qml.hpp  screencast_stream.cpp  screencast_stream.hpp
src/services/portal/: CMakeLists.txt  backend.cpp  backend.hpp  mcshell.portal  qml.cpp  qml.hpp  screencast.cpp  screencast.hpp  screencast_persist.cpp  screencast_persist.hpp  screencast_session.cpp  screencast_session.hpp  screencast_stream.cpp  screencast_stream.hpp  screenshot.cpp  screenshot.hpp  wallpaper.cpp  wallpaper.hpp
src/services/status_notifier/: item.cpp
src/services/sysinfo/: CMakeLists.txt  gpu.cpp  gpu.hpp  sysinfo.cpp  sysinfo.hpp
src/wayland/: CMakeLists.txt  init.cpp  wl_registry_screen_guard.cpp
src/wayland/buffer/: dmabuf.hpp  shm.hpp
src/wayland/data_control/: CMakeLists.txt  history.cpp  history.hpp  proto.cpp  proto.hpp  qml.cpp  qml.hpp
src/wayland/gamma_control/: CMakeLists.txt  proto.cpp  proto.hpp  qml.cpp  qml.hpp
src/wayland/screencopy/: view.cpp  view.hpp
tools/: test-screencast.py
